--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://jitpack.io' }
 }
 
 ext {
@@ -27,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
 
 	compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	compile 'se.michaelthelin.spotify:spotify-web-api-java:4.2.1'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
