Implementing the method to get the musics above of 30 degrees

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# OPEN WEATHER API
+com.grcp.weather.rhythm.openweather.appid=dd822d5631f3dafc40163e815cdf5f10
 
+# SPOTIFY API
+com.grcp.weather.rhythm.spotify.api.clientid=cb899a53393f43e8ab7451e405316849
+com.grcp.weather.rhythm.spotify.api.clientsecret=7bbec175a89449d48f6f5a5c50fac488
