Adding swagger 2 support with spring fox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# SPRING PROFILE
+spring.profiles.active=dev-local
+
 # OPEN WEATHER API
 com.grcp.weather.rhythm.openweather.appid=dd822d5631f3dafc40163e815cdf5f10
 
