--- a/clean-arch/build.gradle
+++ b/clean-arch/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	implementation 'org.mapstruct:mapstruct:1.4.1.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
@@ -37,6 +40,8 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
+	testCompile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
 }
 
 dependencyManagement {
