adding gateway unit test

--- a/clean-arch/build.gradle
+++ b/clean-arch/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
 	compileOnly 'org.projectlombok:lombok'
 
 	annotationProcessor 'org.projectlombok:lombok'
