--- a/clean-arch/src/main/resources/application.yml
+++ b/clean-arch/src/main/resources/application.yml
@@ -10,3 +10,8 @@ api:
     name: weatherApi
     url: https://api.openweathermap.org
     id: dd822d5631f3dafc40163e815cdf5f10
+
+spotify:
+  credentials:
+    clientId: cb899a53393f43e8ab7451e405316849
+    clientSecret: 7bbec175a89449d48f6f5a5c50fac488
