--- a/clean-arch/build.gradle
+++ b/clean-arch/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+	compile group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.4'
 	compile 'se.michaelthelin.spotify:spotify-web-api-java:6.5.1'
+
 
 	compileOnly 'org.projectlombok:lombok'
 
