--- a/clean-arch/.gitignore
+++ b/clean-arch/.gitignore
@@ -4,6 +4,7 @@ build/
 !oldgradle/gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+target/
 
 ### STS ###
 .apt_generated
