--- a/clean-arch/pom.xml
+++ b/clean-arch/pom.xml
@@ -115,7 +115,8 @@
         </executions>
       </plugin>
 
-      <!-- <plugin>
+      <!-- 
+        <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
